--- a/sites/GoIt/react/goit-react-hw-01-components/src/index.css
+++ b/sites/GoIt/react/goit-react-hw-01-components/src/index.css
@@ -1,15 +1,83 @@
 @import-normalize; /* bring in normalize.css styles */
 
+:root {
+  --color-white: #ffffff;
+  --praimery-text-color: #2c2c2c;
+  --title-text-color: #212121;
+  --accent-color: rgb(33, 148, 242);
+  --white-color: #fff;
+  --gray-color: #afb1b8;
+
+  --primary-bg-color: #f5f5f5;
+  --secondary-bg-color: #f5f4fa;
+
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  min-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: var(--praimery-text-color);
+  background-color: var(--secondary-bg-color);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1,
+h2,
+h3,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ol,
+ul {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+}
+
+address {
+  font-style: normal;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  color: currentColor;
+}
+
+:active,
+:hover,
+:focus {
+  outline: 0;
+  outline-offset: 0;
+}
+
+.rootContainer {
+  padding: 40px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 26px;
 }
