--- a/sites/GoIt/react/goit-react-hw-01-components/src/index.css
+++ b/sites/GoIt/react/goit-react-hw-01-components/src/index.css
@@ -77,6 +77,8 @@ a {
   padding: 40px;
   height: 100%;
   display: flex;
+  flex-direction: column;
+  gap: 50px;
   justify-content: center;
   align-items: center;
   font-size: 26px;
